--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,10 +2,12 @@ blinker==1.9.0
 click==8.2.1
 Flask==3.1.1
 flask-cors==6.0.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 numpy==2.3.1
 opencv-python==4.11.0.86
+packaging==25.0
 pyzbar==0.1.9
 Werkzeug==3.1.3
